K8s/Deployment/command_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-command
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-command
  template:
    metadata:
      labels:
        app: server-command
    spec:
      containers:
        - name: server-command
          image: quay.io/emar97/server_command_image
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /app/config.json
              subPath: config_command.json
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: server-command-config
---
apiVersion: v1
kind: Service
metadata:
  name: server-command
spec:
  selector:
    app: server-command
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
