K8s/Deployment/main_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-main
  template:
    metadata:
      labels:
        app: server-main
    spec:
      containers:
        - name: server-main
          image: quay.io/emar97/server_main_image
          ports:
            - containerPort: 8080
            - containerPort: 50051
          volumeMounts:
            - name: config-volume
              mountPath: /app/config.json
              subPath: config_main.json
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: server-main-config


---

apiVersion: v1
kind: Service
metadata:
  name: server-main
spec:
  selector:
    app: server-main
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8080
      name: http
    - protocol: TCP
      port: 50051
      targetPort: 50051
      name: grpc
