K8s/Deployment/sla_manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sla-manager             # Specifies the name of the Deployment
spec:
  replicas: 1                   # Sets the desired number of replicas to 1
  selector:
    matchLabels:
      app: sla-manager          # Selects Pods with the label 'app' set to 'sla-manager'
  template:
    metadata:
      labels:
        app: sla-manager        # Labels the Pods created with 'app: sla-manager'
    spec:
      containers:
        - name: sla-manager
          image: quay.io/emar97/sla_manager_image  # Specifies the Docker image for sla-manager
          ports:
            - containerPort: 13000  # Specifies the port the container listens on
          volumeMounts:
            - name: config-volume
              mountPath: /app/config.json
              subPath: config_sla_manager.json  # Specifies the subpath within the volume
              readOnly: true        # Mounts the volume as read-only
      volumes:
        - name: config-volume
          configMap:
            name: sla-manager-config  # Specifies the ConfigMap to use as volume source

---
apiVersion: v1
kind: Service
metadata:
  name: sla-manager             # Specifies the name of the Service
spec:
  selector:
    app: sla-manager           # Selects Pods with the label 'app' set to 'sla-manager'
  ports:
    - protocol: TCP
      port: 13000              # Specifies the port exposed by the Service
      targetPort: 13000        # Specifies the port targeted by the Service
